@@ -466,3 +466,7 @@ N(OP_ManaUpdate),
 N(OP_EnduranceUpdate),
 N(OP_MobManaUpdate),
 N(OP_MobEnduranceUpdate),
+N(OP_GroupUpdateB),
+N(OP_GroupDisbandYou),
+N(OP_GroupDisbandOther),
+N(OP_GroupLeaderChange),
