@@ -54,6 +54,7 @@ E(OP_GroupInvite)
 E(OP_GroupFollow)
 E(OP_GroupFollow2)
 E(OP_GroupUpdate)
+E(OP_GroupCancelInvite)
 E(OP_WhoAllResponse)
 
 //list of packets we need to decode on the way in:
@@ -76,6 +77,8 @@ D(OP_GroupInvite)
 D(OP_GroupInvite2)
 D(OP_GroupFollow)
 D(OP_GroupFollow2)
+D(OP_GroupDisband)
+D(OP_GroupCancelInvite)
 D(OP_FindPersonRequest)
 D(OP_TraderBuy)
 D(OP_LootItem)
