@@ -418,13 +418,17 @@ OP_AdventureLeaderboardReply=0x7c87	# C
 OP_GroupDisband=0x47e7				# C
 OP_GroupInvite=0x5d32				# C
 OP_GroupFollow=0x321a				# C
-OP_GroupUpdate=0x7351
+OP_GroupUpdate=0x21be
+OP_GroupUpdateB=0x7351
 OP_GroupCancelInvite=0x5251			# C - Same as OP_CancelInvite?
-OP_GroupAcknowledge=0x3ec7			# C
-OP_GroupDelete=0x0000				# 
+OP_GroupAcknowledge=0x3e22			# C
+OP_GroupDelete=0x58e6				# 
 OP_CancelInvite=0x5251				# C
 OP_GroupFollow2=0x2736				# C
 OP_GroupInvite2=0x548c				# C
+OP_GroupDisbandYou=0xc56c
+OP_GroupDisbandOther=0x162d
+OP_GroupLeaderChange=0x7545
 
 # LFG/LFP Opcodes
 OP_LFGCommand=0x3288				# C
